lintian-brush (0.69) UNRELEASED; urgency=medium

  * debian-changelog-line-too-long: Only claim lintian tags were fixed
    when fixing long lines in the last changelog entry.
  * Only scan for 'DO NOT EDIT' in the header of control files. Closes:
    #961601
  * Fix handling of version increases when the existin version ends in
    something that is not a digit.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 26 May 2020 11:51:16 +0000

lintian-brush (0.68) unstable; urgency=medium

  * missing-build-dependency-for-dh_-command: Support checking Build-
    Depends-Indep and Build-Depends-Arch.
  * Properly break lines when adding changelog entries.
  * Improve detection of Gbp-Dch style packages, and output reasoning.
  * Only remove 'Team Upload.' lines in open changelog entries.
  * Print out both committer and changelog identity in --identity.
  * Cache the multi-arch hints in apply-multiarch-hints.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 25 May 2020 21:45:25 +0000

lintian-brush (0.67) unstable; urgency=medium

  * Fix regression when adding a new stanza to an existing changelog
    entry with a single author and more than one bullet point.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 24 May 2020 22:32:10 +0000

lintian-brush (0.66) unstable; urgency=medium

  * Directly edit debian/changelog rather than calling out to dch:
   + Allows adding more details in changelog entries.
   + In apply-multiarch-hints, actually list what changes were made.
   + Possibly addresses #960853.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 24 May 2020 18:28:35 +0000

lintian-brush (0.65) unstable; urgency=medium

  * Explicitly set vendor when running tests; fixes tests running on
    Ubuntu. Closes: #960832
  * Don't just strip whitespace from license paragraphs in copyright-
    refers-to-symlink-license.
  * Improve detection of packages that use gbp-dch by also scanning
    their history for behaviour around gbp dch.