@@ -6,6 +6,8 @@ lintian-brush (0.69) UNRELEASED; urgency=medium
     #961601
   * Fix handling of version increases when the existin version ends in
     something that is not a digit.
+  * Handle MemoryError from fixers, rather than letting them crash all
+    of lintian-brush. Closes: #961810
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 26 May 2020 11:51:16 +0000
 
